maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:33: error: ';' expected but 'while' found.
    }while(nord==true){
     ^